# jike-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  criteria.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
references/: api.md
scripts/: auth.py  client.py  export.py  find_users.py
src/jike/: __init__.py  __main__.py  auth.py  client.py  types.py
tests/: conftest.py  test_auth.py  test_client.py  test_main.py  test_types.py
web/: wrangler.toml
web/src/: worker.js
