[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jike-skill"
version = "0.1.0"
description = "Jike (即刻) client for humans and AI agents — QR login, feed, posts, comments, search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Claude Opus 4.5", email = "noreply@anthropic.com" }]
keywords = ["jike", "即刻", "social", "ai-agent", "claude", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
qr = ["qrcode[pil]"]

[project.scripts]
jike = "jike.__main__:main"
jike-auth = "jike.auth:main"
jike-api = "jike.client:main"

[project.urls]
Repository = "https://github.com/OWNER/jike-skill"

[tool.hatch.build.targets.wheel]
packages = ["src/jike"]
